--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         	<h1>This is a Header</h1>
         
-		<p>This is a paragraph</p>
+		<p>This is one paragraph</p>
 
 		<p>This is a second paragraph</p>
 	</body>
